// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render with many props assigned 1`] = `
<button
  className="Button test-class secondary disabled fullWidth"
  data-id="test-id"
  disabled={true}
  onClick={[Function]}
  tabIndex={-1}
  type="submit"
>
  <span>
    Test
  </span>
</button>
`;

exports[`Button should render with required props 1`] = `
<button
  className="Button primary"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <span>
    Test
  </span>
</button>
`;
